kubernetes/apps/monitoring/kube-prometheus-stack/httproute-alertmanager.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: external-gateway
      namespace: networking
  hostnames:
    - alertmanager.dotfile.sh
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
