kubernetes/apps/monitoring/kube-prometheus-stack/httproute-grafana.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: external-gateway
      namespace: networking
  hostnames:
    - grafana.dotfile.sh
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
